tests/baselines/reference/decoratorOnClassMethod12.errors.txt
tests/cases/conformance/decorators/class/method/decoratorOnClassMethod12.ts(7,10): error TS2660: 'super' can only be referenced in members of derived classes or object literal expressions.
tests/cases/conformance/decorators/class/method/decoratorOnClassMethod12.ts(12,10): error TS2660: 'super' can only be referenced in members of derived classes or object literal expressions.


==== tests/cases/conformance/decorators/class/method/decoratorOnClassMethod12.ts (2 errors) ====
    module M {
        class S {
            decorator(target: Object, key: string): void { }
        }
    
        class C extends S {
            @super.decorator
             ~~~~~
!!! error TS2660: 'super' can only be referenced in members of derived classes or object literal expressions.
            method() { }
        }
    
        const C1 = class extends S {
            @super.decorator
             ~~~~~
!!! error TS2660: 'super' can only be referenced in members of derived classes or object literal expressions.
            method() { }
        }
    }
    